syntax = "proto3";

package app.v1alpha1;

import "google/api/annotations.proto";
import "api/common/error_reason.proto";
import "api/app/v1alpha1/message.proto";
import "google/protobuf/empty.proto";

option go_package = "api/app/v1alpha1;v1alpha1";

service AppInterface {
      rpc Ping(google.protobuf.Empty) returns (common.Msg) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/ping"
            };
      }

      rpc UploadApp(app.v1alpha1.FileUploadRequest) returns(app.v1alpha1.App) {
            option (google.api.http) = {
                  post: "/api/v1alpha1/app/upload"
                  body: "*"
            };
      }

      rpc Save(app.v1alpha1.App) returns (common.Msg) {
            option (google.api.http) = {
                  post: "/api/v1alpha1/app/save"
                  body: "*"
            };
      }

      rpc Get(app.v1alpha1.AppReq) returns (app.v1alpha1.App) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app"
            };
      }

      rpc List(app.v1alpha1.AppReq) returns (app.v1alpha1.AppList) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/list"
            };
      }

      rpc Delete(app.v1alpha1.AppReq) returns (common.Msg) {
            option (google.api.http) = {
                  delete: "/api/v1alpha1/app"
            };
      }

      rpc CreateAppType(app.v1alpha1.AppType) returns (common.Msg) {
            option (google.api.http) = {
                  post: "/api/v1alpha1/app/type"
                  body: "*"
            };
      }

      rpc ListAppType(google.protobuf.Empty) returns (app.v1alpha1.AppTypeList) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/type/list"
            };
      }

      rpc DeleteAppType(app.v1alpha1.AppTypeReq) returns (common.Msg) {
            option (google.api.http) = {
                  delete: "/api/v1alpha1/app/type"
            };
      }

      rpc SaveRepo(app.v1alpha1.AppRepo) returns (common.Msg) {
            option (google.api.http) = {
                  post: "/api/v1alpha1/app/repo"
                  body: "*"
            };
      }

      rpc ListRepo(google.protobuf.Empty) returns (app.v1alpha1.AppRepoList) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/repo/list"
            };
      }

      rpc DeleteRepo(app.v1alpha1.AppRepoReq) returns (common.Msg) {
            option (google.api.http) = {
                  delete: "/api/v1alpha1/app/repo"
            };
      }

      rpc GetAppsByRepo(app.v1alpha1.AppRepoReq) returns (app.v1alpha1.AppList) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/repo/apps"
            };
      }

      rpc GetAppDetailByRepo(app.v1alpha1.AppRepoReq) returns (app.v1alpha1.App) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/repo/app/detail"
            };
      }

      rpc GetAppRelease(app.v1alpha1.AppReleaseReq) returns (app.v1alpha1.AppRelease) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/release"
            };
      }
      
      rpc AppReleaseList(app.v1alpha1.AppReleaseReq) returns (app.v1alpha1.AppReleaseList) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/release/list"
            };
      }

      rpc GetAppReleaseResources(app.v1alpha1.AppReleaseReq) returns (app.v1alpha1.AppReleasepResources) {
            option (google.api.http) = {
                  get: "/api/v1alpha1/app/release/resources"
            };
      }

      rpc SaveAppRelease(app.v1alpha1.AppReleaseReq) returns (app.v1alpha1.AppRelease) {
            option (google.api.http) = {
                  post: "/api/v1alpha1/app/release"
                  body: "*"
            };
      }
      
      rpc DeleteAppRelease(app.v1alpha1.AppReleaseReq) returns (common.Msg) {
            option (google.api.http) = {
                  delete: "/api/v1alpha1/app/release"
            };
      }

}