syntax = "proto3";

package biz.event;

option go_package = "github.com/f-rambo/cloud-copilot/internal/biz;";

enum EventSource {
      EventSource_UNSPECIFIED = 0;
      CLUSTER = 1;
      APP = 2;
      PROJECT = 3;
      SERVICE = 4;
      USER = 5;
}

enum EventAction {
      EventAction_UNSPECIFIED = 0;
      CREATE = 1;
      UPDATE = 2;
      DELETE = 3;
}

enum EventStatus {
      EventStatus_UNSPECIFIED = 0;
      PENDING = 1;
      PROCESSING = 2;
      SUCCESS = 3;
      FAILED = 4;
}

message Event {
      string id = 1; // @gotags: gorm:"column:id;primaryKey;AUTO_INCREMENT"
      string name = 2; // @gotags: gorm:"column:name; default:''; NOT NULL"
      EventSource source = 3; // @gotags: gorm:"column:source; default:0; NOT NULL"
      EventAction action = 4; // @gotags: gorm:"column:action; default:0; NOT NULL"
      EventStatus status = 5; // @gotags: gorm:"column:status; default:0; NOT NULL"
      int64 source_id = 6; // @gotags: gorm:"column:source_id; default:0; NOT NULL"
      string data = 7; // @gotags: gorm:"column:data; default:''; NOT NULL"
      string error = 8; // @gotags: gorm:"column:error; default:''; NOT NULL"
      string created_at = 9; // @gotags: gorm:"column:created_at; default:''; NOT NULL"
}